    
  - Support the `memoir` LaTeX document class.
    Fixes #390, #391, and #392. 
    
  - The special value "auto" for the `graphicx_option`_ setting
    is no longer supported (it never worked for xetex/luatex).

    .. _graphicx_option: docs/user/config.html#graphicx-option

  - Most helper commands and element definitions are now defined in the
    LaTeX package `docutils.sty` and no longer inserted in the document
    preamble if the `stylesheet` setting lists "docutils".

* docutils/writers/manpage.py

  - Fix #394 fix missing new line after rubric.
  - Patch #168 fix crashing on empty citation (by Takeshi KOMIYA).
  - Fix #126 manpage title with spaces.
  - Fix #380 commandline option problem in sphinx.

* test/DocutilsTestSupport.py

  - Run python3 test like python2 against source not the build/-directory

.. _pip: https://pypi.org/project/pip/


Release 0.16
============

* General

  - Dropped support for Python 2.6, 3.3 and 3.4
  - Docutils now supports Python 2.7 and Python 3.5+ natively
    (without conversion by ``2to3``).
  - Keep `backslash escapes`__ in the document tree. Backslash characters in
    text are be represented by NULL characters in the ``text`` attribute of
    Doctree nodes and removed in the writing stage by the node's
    ``astext()`` method.

  __ http://docutils.sourceforge.net/docs/ref/rst/restructuredtext.html#escaping-mechanism

* docutils/io.py

  - Remove the `handle_io_errors` option from io.FileInput/Output.

* docutils/nodes.py

  - Speed up Node.next_node().
  - If `auto_id_prefix`_ ends with "%", this is replaced with the tag name.
  - Warn about Node.traverse() returning an iterator instead of a list
    in future.

  .. _auto_id_prefix: docs/user/config.html#auto-id-prefix

* docutils/statemachine.py

  - Patch [ 158 ]: Speed up patterns by saving compiled versions (eric89gxl)

* docutils/transforms/universal.py

  - Fix [ 332 ]: Standard backslash escape for smartquotes.