@@ -24,9 +24,9 @@
 
 
 %%% User specified packages and stylesheets
-\usepackage{docutils}
 
 %%% Fallback definitions for Docutils-specific commands
+\usepackage{docutils}[2020/08/28]
 
 % character width in monospaced font
 \newlength{\ttemwidth}
